# Neurogenesis

./: .gitignore  AGENTS.md  AUTORESEARCH.md  Cargo.toml  EVALUATION_GUIDANCE.md  Makefile  README.md  REFACTOR_TICKETS.md  SPEC.md  TASKS.md  TURN_OPTIMIZATION_LOG.md  autoresearch.md  context.md  package.json  prompt.md  redesign.md  run_autoresearch.sh  web-client-tasks.md
.claude/: settings.local.json
artifacts/research/: README.md
brain/: Cargo.toml
brain/src/: evaluation.rs  expression.rs  learning.rs  lib.rs  plasticity.rs  profiling.rs  topology.rs
cli/: Cargo.toml
cli/src/: dashboards.rs  ecology.rs  experiment.rs  main.rs  neat.rs  neat_hidden_string.rs  sweep.rs  tui.rs
config/: Cargo.toml  default.toml  seed_genome.toml  world.toml
config/src/: config.rs
context/: ConfigParams.md  brain.rs  spawn.rs  turn.rs
docs/: SYSTEMS.md  cli.md  conditional-foraging-adversarial-audit.md  crossover-gates.md  endogenous-replication-closure.md  evaluation-tasks.md  neat-run-lifecycle.md  open-endedness-finiteness-audit.md  performance-baseline.md  procedural-ecology-adversarial-audit.md  research-operating-procedure.md  server-api.md  sim-cli-design.md  sim-cli-stateless-spec.md  sim-cli.md  solver-dependent-ecology-route.md  tcpe-feasibility-audit.md  v1-behavior-contract.md
docs/protocol-examples/: create-session-request.json  ws-command-start.json  ws-command-step.json  ws-event-envelope.json
evolution/: Cargo.toml
evolution/src/: lib.rs  resource_ecology.rs  task.rs  task_adapter.rs
evolution/src/tasks/: hidden_string.rs  mod.rs  symbol_copy.rs
metrics/: Cargo.toml
metrics/src/: ingest.rs  intervals.rs  ledger.rs  lib.rs  pillars.rs  schema.rs
research/: BRIEF.md  CONVENTIONS.md  INDEX.md  README.md  STATE.md  best-program.md  index.md  log.md
research/archive/: README.md  atlas.html  legacy-operating-procedure.md  redesign.md
research/dead-ends/: flat-metabolism-cut-removes-action-selective-pressure.md  (+1 more)
scripts/: gather-llm-context.mjs
sim-cli/: Cargo.toml
sim-cli/src/: conditional.rs  dashboards.rs  inspect_ext.rs  main.rs  neat.rs  output.rs  powerplay.rs  ppec.rs  procedural_ecology.rs  sweep.rs  tui.rs
sim-config/: CONFIG_REFERENCE.md  Cargo.toml  config.toml  default.toml  seed_genome.toml
sim-core/: Cargo.toml
sim-core/benches/: turn_throughput.rs
sim-core/examples/: phase_timing.rs  profile_turn_path.rs  progressive_capacity_probe.rs  walltime_profile.rs
sim-core/profiling/: profile_turn_path.rs
sim-core/src/: brain.rs  conditional.rs  evolution.rs  genome.rs  grid.rs  lib.rs  metabolism.rs  neuron_constants.rs  plasticity.rs  powerplay.rs  ppec.rs  procedural_ecology.rs  profiling.rs  progressive.rs  reward.rs  spawn.rs  species.rs  tests.rs  topology.rs  turn.rs
sim-core/src/brain/: actor_critic.rs  evaluation.rs  expression.rs  mod.rs  pending_action.rs  plasticity.rs  reward.rs  sensing.rs  topology.rs
sim-core/src/genome/: mod.rs  mutation_rates.rs  sanitization.rs  scalar.rs  seed.rs  spatial_prior.rs  synapse_creation.rs  topology.rs
sim-core/src/powerplay/: public_preamble.rs
sim-core/src/ppec/: experiment.rs
sim-core/src/spawn/: food.rs  grid.rs  mod.rs  organisms.rs  world.rs
sim-core/src/tests/: config_and_seed.rs  genome_mutation.rs  lifecycle_and_invariants.rs  mod.rs  movement_resolution.rs  performance_regression.rs  plasticity_learning.rs  reproduction_and_spawn.rs  sensing_and_actions.rs  support.rs
sim-core/src/turn/: commit.rs  intents.rs  lifecycle.rs  mod.rs  moves.rs  reproduction.rs  snapshot.rs
sim-core/tests/: golden.rs
sim-core/tests/fixtures/: golden_seed42_epoch3.json  golden_seed42_turn30.json
sim-evaluation/: Cargo.toml  EVALUATION_GUIDANCE.md  PERF_LOG.md  config.toml  seed_genome.toml
sim-hexworld/: Cargo.toml
sim-hexworld/examples/: headless.rs  simsmoke.rs
sim-hexworld/src/: catalog.rs  grid.rs  lib.rs  sim.rs
sim-metrics/: Cargo.toml
sim-protocol/: Cargo.toml
sim-server/: Cargo.toml  champion_pool.json
sim-server/src/: lib.rs  main.rs  protocol.rs
sim-server/worlds/: 1770930737198_a9231e58-ddba-40a3-aff2-ee637c6250a1.json  1770930737261_339c28f4-9c2b-4d77-b1a3-02c983de1018.json  1770930737450_f3c4bd84-2ce0-4b76-8525-8560a61f3b25.json  1770930737504_daf37577-df1f-4226-a2e3-e7c66d28d9f9.json  1770930737534_d362544b-ac12-4d9f-855b-e9c3f7534d25.json  1770930737702_607bf1f8-009f-47fc-8c3a-36700dde9e2a.json  1770930737830_2c940094-22c8-4194-8392-4be7e346e035.json  1770932123574_c793b343-acae-4b6b-8b3f-35414a0adfdb.json  1770932123576_31817158-9577-4bb6-a178-8c004ed92fd3.json  1770932136425_e4f32363-83cb-413e-9a5b-ac93b8b955ea.json  1770932136461_903ac2a5-afca-4045-90db-dad9a0bf9d02.json
sim-substrate/: Cargo.toml
sim-substrate/examples/: headless.rs
sim-substrate/src/: brain.rs  catalog.rs  cppn.rs  develop.rs  driver.rs  environment.rs  genome.rs  lib.rs  operators.rs  plasticity.rs  qd.rs  rng.rs  seed.rs
sim-toyenv/: Cargo.toml
sim-types/: Cargo.toml
sim-validation/: Cargo.toml  config.toml
sim-validation/src/: aggregation.rs  cli.rs  comparison.rs  ledger.rs  main.rs  metrics.rs  orchestration.rs  output.rs  report.rs  types.rs
sim-views/: Cargo.toml
sim-views/src/: dashboards.rs  inspect_ext.rs  lib.rs  output.rs
specs/: TURN_RUNNER_SPEC.md  spec.md  system_spec.md  validation_harness_design.md
task-library/: Cargo.toml
types/: Cargo.toml
types/src/: lib.rs
views/: Cargo.toml
views/src/: dashboards.rs  inspect_ext.rs  lib.rs
web-client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
world-sim/: Cargo.toml
world-sim/benches/: turn_throughput.rs
world-sim/examples/: phase_timing.rs  walltime_profile.rs
world-sim/profiling/: profile_turn_path.rs
world-sim/src/: grid.rs  lib.rs  sensing.rs
world-sim/src/spawn/: food.rs  mod.rs  organisms.rs  world.rs
world-sim/src/tests/: config_and_seed.rs  lifecycle_and_invariants.rs  mod.rs  movement_resolution.rs  support.rs
world-sim/src/turn/: commit.rs  intents.rs  lifecycle.rs  mod.rs  moves.rs  snapshot.rs
(+393 files in other folders)
