[workspace]
members = [
  "sim-config",
  "sim-core",
  "sim-evaluation",
  "sim-metrics",
  "sim-types",
  "sim-server",
  "sim-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros", "json"] }
futures = "0.3"
rand = "0.9"
rand_chacha = { version = "0.9", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
criterion = "0.7"
toml = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
rand_distr = "0.5"
arrow = "54"
parquet = { version = "54", features = ["arrow"] }
serde_arrow = { version = "0.12", features = ["arrow-54"] }
bincode = "1.3"
ciborium = "0.2"
