[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
toml.workspace = true
ring = "0.17.14"
bincode.workspace = true
ratatui = "0.30"
config = { path = "../config" }
evolution = { path = "../evolution" }
world-sim = { path = "../world-sim", features = ["instrumentation"] }
types = { path = "../types", features = ["instrumentation"] }
metrics = { path = "../metrics" }
views = { path = "../views" }
