[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
bincode.workspace = true
zstd.workspace = true
ratatui = "0.30"
config = { path = "../config" }
evolution = { path = "../evolution" }
task-library = { path = "../task-library" }
world-sim = { path = "../world-sim", features = ["instrumentation"] }
types = { path = "../types", features = ["instrumentation"] }
metrics = { path = "../metrics" }
views = { path = "../views" }
