[package]
name = "evolution"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["instrumentation"]
instrumentation = ["world-sim/instrumentation", "types/instrumentation"]

[dependencies]
anyhow.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
serde.workspace = true
brain = { path = "../brain" }
config = { path = "../config" }
metrics = { path = "../metrics" }
types = { path = "../types" }
world-sim = { path = "../world-sim" }
