[package]
name = "evolution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
brain = { path = "../brain" }
types = { path = "../types" }
task-library = { path = "../task-library" }
