[package]
name = "sim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sim-core = { path = "../sim-core" }
sim-protocol = { path = "../sim-protocol" }
