[package]
name = "sim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
sim-substrate = { path = "../sim-substrate" }
sim-hexworld = { path = "../sim-hexworld" }
