[package]
name = "sim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
toml.workspace = true
ring = "0.17.14"
bincode.workspace = true
ratatui = "0.30"
sim-config = { path = "../sim-config" }
sim-core = { path = "../sim-core", features = ["instrumentation"] }
sim-types = { path = "../sim-types", features = ["instrumentation"] }
sim-metrics = { path = "../sim-metrics" }
sim-views = { path = "../sim-views" }
