[package]
name = "sim-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sim-types = { path = "../sim-types" }

[dev-dependencies]
serde_json.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "turn_throughput"
harness = false
