[package]
name = "sim-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
profiling = []

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand_distr.workspace = true
sim-types = { path = "../sim-types" }
rayon = "1.10"

[dev-dependencies]
serde_json.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "turn_throughput"
harness = false

[[example]]
name = "profile_turn_path"
path = "profiling/profile_turn_path.rs"
