[package]
name = "sim-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tower-http.workspace = true
sim-config = { path = "../sim-config" }
sim-core = { path = "../sim-core" }
sim-types = { path = "../sim-types" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.28"
url = "2"
