[package]
name = "sim-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
instrumentation = ["world-sim/instrumentation", "types/instrumentation"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
bincode.workspace = true
clap = { version = "4.5", features = ["derive"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tower-http.workspace = true
config = { path = "../config" }
world-sim = { path = "../world-sim" }
types = { path = "../types" }
views = { path = "../views" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.28"
url = "2"
