[package]
name = "sim-validation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde.workspace = true
serde_json.workspace = true
sim-config = { path = "../sim-config" }
sim-core = { path = "../sim-core", features = ["instrumentation"] }
sim-types = { path = "../sim-types", features = ["instrumentation"] }
