[package]
name = "sim-views"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
toml.workspace = true
sim-config = { path = "../sim-config" }
sim-core = { path = "../sim-core", features = ["instrumentation"] }
sim-types = { path = "../sim-types", features = ["instrumentation"] }
sim-metrics = { path = "../sim-metrics" }
